cover.css
h1 {
  font-family: 'Permanent Marker', Helvetica, Arial, sans-serif;
  font-size: 70px;
  line-height: 75px;
  color:#1a1a1a;
  text-shadow: 1px 1px 1px #1a1a1a;
}

h2 {
  font-family: 'Permanent Marker', Helvetica, Arial, sans-serif;
  font-size: 40px;
  line-height: 45px; /*this is set for the akaHenry logo*/
  color:#333333;
}

h3 {
  font-family: 'Permanent Marker', Helvetica, Arial, sans-serif;
  font-size: 30px;
  line-height: 35px;
  color:#333333;
}

h4 {
  font-family: 'Permanent Marker', Helvetica, Arial, sans-serif;
  font-size: 40px;
  line-height: 45px;
  color:#333333;
}

p {
  font-family: 'Maven Pro', Helvetica, Arial, sans-serif;
  font-size: 20px;
  line-height: 20px;
  color:#1a1a1a;
}

.div-that-you-want-to-stand-out { 
    box-shadow: 0 0 1em 1em #ccc;
}


/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritence from `body` */
  background-color: #fff;
  border: 1px solid #fff;
}


/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-color: #333;
  background: url(background5.png) repeat 0 0;
  background-size:cover;
}
body {
  color: #fff;
  text-align: center;
  text-shadow: 0 1px 3px rgba(0,0,0,.5);
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
  display: table;
  width: 100%;
  height: 100%; /* For at least Firefox */
  min-height: 100%;
  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
}
.site-wrapper-inner {
  display: table-cell;
  vertical-align: top;
}
.cover-container {
  margin-right: auto;
  margin-left: auto;
}

/* Padding for spacing */
.inner {
  padding: 30px;
}


/*
 * Header
 */
.masthead-brand {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 40px;
  line-height: 20px; /*this is set for the akaHenry logo*/
}

.masthead-nav > li {
  display: inline-block;
}
.masthead-nav > li + li {
  margin-left: 20px;
}
.masthead-nav > li > a {
  padding-right: 0;
  padding-left: 0;
  font-size: 19px; /*16px;*/
  font-weight: bold;
  color: #fff; /* IE8 proofing */
  color: #1a1a1a; /*rgba(255,255,255,.75);*/
  border-bottom: 2px solid transparent;
}
.masthead-nav > li > a:hover,
.masthead-nav > li > a:focus {
  background-color: transparent;
  border-bottom-color: #a9a9a9;
  border-bottom-color: rgba(255,255,255,.25);
}
.masthead-nav > .active > a,
.masthead-nav > .active > a:hover,
.masthead-nav > .active > a:focus {
  color: #d9534f; /*#fff;*/ /*same color as red bootstrap button*/
  border-bottom-color: #d9534f; /*#fff;*/
}

@media (min-width: 768px) {
  .masthead-brand {
    float: left;
  }
  .masthead-nav {
    float: right;
  }
}


/*
 * Cover
 */

.cover {
  padding: 0 20px;
}
.cover .btn-lg {
  padding: 10px 20px;
  font-weight: bold;
}

/*
 * Resume
 */
.resume {
  width: 1000px;
}

/*
 * Footer
 */

.mastfoot {
  color: #999; /* IE8 proofing */
  color: rgba(255,255,255,.5);
}


/*
 * Affix and center
 */

@media (min-width: 768px) {
  /* Pull out the header and footer */
  .masthead {
    position: absolute;
    top: 0;
  }
  .mastfoot {
    /*position: fixed;*/
    bottom: 0;
  }
  /* Start the vertical centering */
  .site-wrapper-inner {
    vertical-align: middle;
  }
  /* Handle the widths */
  .masthead,
  .mastfoot,
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 992px) {
  .masthead,
  .mastfoot,
  .cover-container {
    width: 1000px;    /*will this scale with screen size?*/
  }
}

